# mh-interview

./: .gitattributes  .gitignore  Dockerfile  TODO.md  _main.py  extract_audio.py  filter.py  get_features.py  main.py  png_to_mkv.sh  prepare.sh  pyproject.toml  relevance.py  sample.csv  show_aggregated_features.py  wav.py
audio_features/: emotions_features.py  extract_audio.py  opensmile_features.py
data/: actuals.csv  scores.csv  video_2025-08-17_20-04-23.csv  video_2025-08-17_21-17-21.csv  video_2025-08-19_22-02-20.csv
data/features/: af_opensmile.parquet  vf_tsfresh.parquet
data/parquet/: 0074.parquet  1509.parquet  1565.parquet  1618.parquet  1855.parquet  2489.parquet  2740.parquet  3485.parquet  4792.parquet  4900.parquet  7765.parquet  8581.parquet  8660.parquet  9234.parquet  9430.parquet
data/transcript/: 0089.txt  0327.txt  0526.txt  0604.txt  0657.txt  0801.txt  1000.txt  1000_1.txt  1122.txt  1240.txt  1241.txt  1510.txt  1575.txt  1603.txt  1618.txt  1855.txt  1946_1.txt  1946_2.txt  2092.txt  2151.txt  2188.txt  2241.txt  2489.txt  2602.txt  2775.txt  2899.txt  3041.txt  3153.txt  3412.txt  3420.txt  3449.txt  3485.txt  3536.txt  3645.txt  3782.txt  3833.txt  4017.txt  4093.txt  4270.txt  4312.txt  (+45 more)
llm_predict_transcriptions/: actuals.csv  actuals_scores.csv  analyze.py  binarize.py  predict.py  system_prompt.txt
llm_predict_transcriptions/predictions/: deepseek-r1-0528.csv  gemini-2.5-pro.csv  gpt-5.csv  grok-4.csv  llama-3.1-405b-instruct.csv  llama-3.3-70b-instruct.csv  qwen3-235b-a22b.csv  qwq-32b.csv
llm_predict_transcriptions/transcripts/: 0074.txt  0164.txt  0266.txt  (+42 more)
openface/: CMakeLists.txt  CMakePresets.json  docker_build.sh  docker_push.sh
script/: videoinfo.py
text_features/: actuals_bin.csv  llm_features.py  plot.py  predict.py  result.csv  stats.py  system_prompt_2.txt
transcript/: whisper_transcript.py
video_features/: csv_to_parquet.py  features_stats.py  openface_features.py  plots.py  snapshots.py  ts_features.py  tsfresh_features.py
(+173 files in other folders)
