[project]
name = "mental-wellbeing"
version = "0.1.0"
description = "Mental wellbeing analysis"
readme = "README.md"
requires-python = "==3.9.5"
dependencies = [
    "psutil==7.1.3",
    "gputil==1.4.0",
    "dotenv==0.9.9",
    "numpy==1.26.4",
    "pyarrow==21.0.0",
    "seaborn==0.13.2",
    "setuptools==80.9.0",
    "tables==3.9.2",
    "tsfresh==0.21.0",
    "opensmile==2.6.0",
    "pyloudnorm==0.1.1",
    "soundfile==0.13.1",
    "accelerate==1.8.1",
    "datasets[audio]==4.0.0",
    "transformers==4.53.2",
    "llama-cpp-python==0.3.16",
    "torchaudio==2.8.0"
]

[[tool.uv.index]]
url = "https://abetlen.github.io/llama-cpp-python/whl/cu124"
